# topo-jvm

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/adaptive/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/adaptive/src/main/java/app/: Main.java
benchmarks/adaptive/topo/: main.topo
benchmarks/data_layout/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/data_layout/src/main/java/app/: Main.java  Particle.java
benchmarks/data_layout/topo/: main.topo
benchmarks/data_layout_freq/: Topo-base.toml  Topo.toml
benchmarks/data_layout_freq/src/main/java/app/: Main.java  Particle.java
benchmarks/data_layout_freq/topo/: main.topo
benchmarks/lifetime/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/lifetime/src/main/java/app/: Main.java
benchmarks/lifetime/topo/: main.topo
benchmarks/lifetime_alloc/: Topo-base.toml  Topo.toml
benchmarks/lifetime_alloc/src/main/java/app/: Main.java
benchmarks/lifetime_alloc/topo/: main.topo
benchmarks/loop_vectorize/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/loop_vectorize/src/main/java/app/: Main.java
benchmarks/loop_vectorize/topo/: main.topo
benchmarks/obfuscation/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/obfuscation/src/main/java/app/: Base.java  Main.java  Sub.java
benchmarks/obfuscation/topo/: main.topo
benchmarks/observability/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/observability/src/main/java/app/: Main.java
benchmarks/observability/topo/: main.topo
benchmarks/parallel/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/parallel/src/main/java/app/: Main.java
benchmarks/parallel/topo/: main.topo
benchmarks/pipeline/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/pipeline/src/main/java/app/: Main.java
benchmarks/pipeline/topo/: main.topo
benchmarks/prefetch/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/prefetch/src/main/java/app/: Main.java
benchmarks/prefetch/topo/: main.topo
benchmarks/stages/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/stages/src/main/java/app/: Main.java
benchmarks/stages/topo/: main.topo
benchmarks/type_narrowing/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/type_narrowing/src/main/java/app/: Main.java
benchmarks/type_narrowing/topo/: main.topo
benchmarks/visibility/: Topo-base.toml  Topo-forced.toml  Topo.toml
benchmarks/visibility/src/main/java/app/: Main.java
benchmarks/visibility/topo/: main.topo
cmake/: TopoBenchArtifacts.cmake  TopoBenchArtifactsDriver.cmake  TopoBenchCategoryLabels.cmake  TopoE2eProjectLocks.cmake  TopoJvmCompilerFlags.cmake  topo-jvmConfig.cmake.in
decompile/: build.gradle.kts  settings.gradle.kts
decompile/src/main/java/topo/decompile/: BytecodeConverter.java  JVMLifter.java  Main.java  StructuredLifter.java
decompile/src/test/java/topo/decompile/: LambdaRecoveryTest.java  MainPathSanitizeTest.java  StructuredLifterTest.java
test/: CMakeLists.txt
test/e2e/: CMakeLists.txt  E2eHarness.cpp  E2eHarness.h  JavaFunctionalTests.cpp  JvmBenchmarkTests.cpp  JvmEquivalenceTests.cpp  TopoTomlSwapTest.cpp
test/unit/: BackendExtrasInputTrustTest.cpp  CMakeLists.txt
tools/topo-build-jvm-java/: CMakeLists.txt  main.cpp
transform/: build.gradle.kts  settings.gradle.kts
transform/src/main/java/dev/topo/transform/: BytecodeSymbolMapper.java  BytecodeVerifier.java  PassPipeline.java  PostTransformResult.java  PostTransformVerifier.java  TopoTransformer.java  VerifyResult.java
transform/src/main/java/dev/topo/transform/pass/: AdaptivePass.java  ArenaPass.java  BasePass.java  ClassHierarchy.java  DataLayoutPass.java  InlineHintPass.java  LoopVectorizePass.java  MethodKey.java  MethodKeyMatcher.java  ObfuscationPass.java  ObservabilityPass.java  ParallelPass.java  PipelinePass.java  PrefetchPass.java  QualifiedNameMatch.java  ReturnSpecializationPass.java  SipHash.java  StageReorderPass.java  StaticPromotionPass.java  TypeNarrowingPass.java  VisibilityPass.java
transform/src/test/java/dev/topo/: PassEvents.java
transform/src/test/java/dev/topo/transform/: BytecodeSymbolMapperTest.java  BytecodeVerifierRealJavacTest.java  BytecodeVerifierTest.java  PassPipelineRealJavacTest.java  PassPipelineTest.java  RealJavacFixture.java  VerifyResultTest.java
transform/src/test/java/dev/topo/transform/pass/: DataLayoutPassRealJavacTest.java  DataLayoutPassTest.java  InlineHintPassTest.java  LoopVectorizePassTest.java  MethodKeyTest.java  ObfuscationPassOverrideTest.java  ObfuscationPassRealJavacTest.java  ObfuscationPassTest.java  ObservabilityPassTest.java  ParallelPassTest.java  PipelinePassTest.java  PrefetchPassTest.java  ReturnSpecializationPassTest.java  SipHashTest.java  StageReorderPassTest.java  StaticPromotionPassTest.java  TypeNarrowingPassTest.java  VisibilityPassRealJavacTest.java  VisibilityPassTest.java
